--- a/sass/base/_base-classes.scss
+++ b/sass/base/_base-classes.scss
@@ -15,18 +15,22 @@
     color: $accent-color;
 }
 
-// .header__link--current::after {
-//     content: '';
-//     position: absolute;
-//     bottom: 0;
-//     left: 0;
-//     width: 100%;
-//     height: 4px;
+@media screen and  (min-width: 1600px) {
+    .header__link--current::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 4px;
 
-//     border-radius: 2px;
+        border-radius: 2px;
 
-//     background-color: $accent-color;
-// }
+        background-color: $accent-color;
+    }
+}
+
+
 
 body {
     margin: 0;
@@ -37,13 +41,13 @@ body {
 }
 
 .container {
-    // margin: 0 auto;
+    margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
 
     @media screen and (min-width: 480px) {
         width: 480px;
-        margin: 0 auto;
+        // margin: 0 auto;
 
     }
 
@@ -63,6 +67,11 @@ body {
         }
     }
 
+    @media screen and (min-width: 1200px) {
+        width: 1200px;
+
+    }
+
     &__header {
         display: flex;
         justify-content: space-between;
@@ -73,11 +82,11 @@ body {
 .section {
     padding: 94px 0;
 
-    & {
-        @media screen and (max-width: 768px) {
-            padding: 60px 0;
-        }
+    
+     @media screen and (max-width: 768px) {
+         padding: 60px 0;
     }
+
 }
 
 .section__title {
