--- a/sass/components/index/_address.scss
+++ b/sass/components/index/_address.scss
@@ -24,26 +24,35 @@
         }
     }
 
-    @media screen and (min-width: 768px) {
+    // @media screen and (max-width: 767px) {
 
+    //     color: $primary-text-color;
+    //     display: flex;
+    //     flex-direction: column;
+    //     gap: 10px;
+    
+    //     font-weight: 500;
+    //     font-size: 14px;
+    //     line-height: 1.14;
+    //     letter-spacing: 0.02em;
+
+    //     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    // }
+
+    @media screen and (min-width: 1200px) {
         color: $primary-text-color;
         display: flex;
-        flex-direction: column;
-        gap: 10px;
-        // margin-left: auto;
-        // padding-top: 32px;
-        // padding-bottom: 32px;
+        margin-left: auto;
+        padding-top: 32px;
+        padding-bottom: 32px;
     
         font-weight: 500;
         font-size: 14px;
         line-height: 1.14;
         letter-spacing: 0.02em;
-
-         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-
-
 }
 
 .adress__icon {
@@ -65,6 +74,10 @@
     height: 16px;
 }
 
+.adress__item {
+
+}
+
 // .adress__item:not(:first-child) {
 //     margin-left: 50px;
 // }
@@ -75,6 +88,11 @@
                 display: inline-block;
                 color: $accent-color;
                 margin-bottom: 32px;
+
+                font-weight: 500;
+                font-size: 34px;
+                line-height: 40px;
+                letter-spacing: 0.02em
             }
         
             a[href^="mail"] {
@@ -86,18 +104,35 @@
                 line-height: 1.16;
                 letter-spacing: 0.02em
             }
+            
         }
 
         @media screen and (min-width: 768px) {
-            // &:not(:first-child) {
-            //     margin-left: 50px;
-            // }
-
             font-weight: 500;
             font-size: 12px;
             line-height: 1.16;
 
             letter-spacing: 0.02em;
+
+            margin-left: 50px;
+        }
+
+        // &:not(:last-child) {
+        //     margin-bottom: 10px;
+        // }
+
+        @media screen and (min-width: 1200px) {
+            font-weight: 500;
+            font-size: 14px;
+            line-height: 1.14;
+            letter-spacing: 0.02em;
+            margin-bottom: 0;
+        }
+
+        @media screen and (max-width: 1199px) {
+           &:not(:last-child) {
+            margin-bottom: 10px;
+        }
         }
     }
  
@@ -117,7 +152,5 @@
     &--current {
         color: $accent-color;
     }
-
-    
   
 }
