--- a/sass/components/index/_firms.scss
+++ b/sass/components/index/_firms.scss
@@ -3,6 +3,13 @@
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 30px;
+
+    @media screen and (min-width: 1200px ) {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: nowrap;
+        gap: 30px
+    }
 }
 
 .firms__item {
@@ -21,17 +28,19 @@
         color: $accent-color;
         outline: $accent-color;
     }
-
     
-     @media screen and (max-width: 480px) {
-        flex-basis: calc(50% - 15px);
+    @media screen and (max-width: 480px) {
+        flex-basis: calc(100% / 2 - 15px);
         justify-content: center;
         gap: 15px;
     }
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: 767px) {
         flex-basis: calc(100% / 3 - 20px);
+    }
 
+    @media screen and (min-width: 1200px) {
+        display: flex;
     }
     
 }
