--- a/sass/components/index/_footer.scss
+++ b/sass/components/index/_footer.scss
@@ -6,20 +6,28 @@
     background: #2F303A;
 
     &__wrapper {
-        // display: flex;
-        // align-items: baseline;
+        display: flex;
+        align-items: baseline;
+
+        @media screen and (max-width: 480px) {
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+        align-items: baseline;
+
+        }
 
         @media screen and (max-width: 767px) {
-            // margin-right: 0;
             text-align: center;
         }
 
-        @media screen and (min-width: 768px) {
+        @media screen and (max-width: 1199px) {
             display: flex;
             flex-wrap: wrap;
             text-align: center;
             align-items: baseline;
         }
+
     }
 
     &__list {
@@ -30,25 +38,33 @@
     }
 
     &__adress {
-        @media screen and (max-width: 767px) {
+        @media screen and (max-width: 480px) {
             margin-bottom: 60px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         @media screen and (min-width: 768px) {
             margin-left: 76px;
+            margin-bottom: 60px;
         }
 
+        @media screen and (min-width: 1200px) {
+            margin: 0;
+        }
     }
 }
 
 .footer__logo {
     @extend %logo;
-
-    // margin: 0;
-    // margin-right: 94px;
     margin-bottom: 20px;
-
     color: $color-white;
+
+    @media screen and (min-width: 1200px) {
+        margin: 0;
+        margin-bottom: 20px;
+        margin-right: 94px;
+    }
 }
 
 .footer__span {
@@ -96,14 +112,19 @@
     // margin-left:  70px;
 
     @media screen and (max-width: 767px) {
-        // display: flex;
-        // text-align: center;
+        
         margin-bottom: 60px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     @media screen and (min-width: 768px) {
        margin-left: 162px;
     }
+
+    @media screen and (min-width: 1200px) {
+        margin-left: 70px;
+     }
 }
 
 .join-footer__title,
@@ -120,7 +141,6 @@
 
     @media screen and (max-width: 767px) {
         margin-bottom: 20px;
-        // display: block;
     }
 
 }
@@ -136,19 +156,32 @@
 // Mail section
 
 .mail-wrapper {
-    // display: flex;
-    // margin-left: auto;
+
+    @media screen and (max-width: 480px) {
+        margin-left: auto;
+    }
 
     @media screen and (min-width: 768px) {
-        margin-left: 166px;
-        margin-top: 60px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    @media screen and (min-width: 1200px) {
+        display: flex;
+        margin-left: auto;
+        margin-right: 0;
     }
 
     &__footer {
-        @media screen and (min-width: 768px) {
+        @media screen and (max-width: 768px) {
             display: flex;
             flex-direction: column;
             margin-bottom: 20px;
+        }
+
+        @media screen and (min-width: 1200px) {
+            display: flex;
+            flex-direction: column;
         }
        
     }
@@ -172,8 +205,12 @@
         color: $color-white;
 
         @media screen and (max-width: 767px) {
-            width: 100%;
+            // width: 100%;
             margin-bottom: 20px;
+        }
+
+        @media screen and (max-width: 480px) {
+            width: calc(100vw - 30px);
         }
     }
 }
