--- a/sass/components/index/_page-header.scss
+++ b/sass/components/index/_page-header.scss
@@ -62,6 +62,19 @@
       
     }
 
+    @media screen and (min-width: 1200px) {
+
+        &__wrapper {
+            display: flex;
+            align-items: baseline;
+        }
+
+        // &__logo {
+        //     display: flex;
+        //     align-items: center;
+        // }
+      
+    }
 }
 
 
@@ -122,7 +135,6 @@
 .header-social__list {
     display: flex;
     position: relative;
-    gap: 10px;
     // justify-content: space-between;
     gap: 20px;
 
@@ -180,6 +192,10 @@
     }
 
     @media screen and (min-width: 768px) {
+        margin-left: -96px;
+    }
+
+    @media screen and (min-width: 1200px) {
         margin-right: 96px;
     }
 }
@@ -188,11 +204,14 @@
     display: flex;
     align-items: center;
    
-
     @media screen and (max-width: 767px) {
         flex-direction: column;
         align-items: baseline;
+        margin-right: 30px;
+
     }
+
+
 }
 
 .header__item {
@@ -266,7 +285,7 @@
         &::after {
             content: '';
             position: absolute;
-            bottom: 0;
+            bottom: -1px;
             left: 0;
             width: 100%;
             height: 4px;
