--- a/sass/components/index/_significant.scss
+++ b/sass/components/index/_significant.scss
@@ -1,12 +1,25 @@
 .significant {
-    // display: flex;
-    // gap: 30px;
+    gap: 30px;
+
+    @media screen and (max-width: 767px) {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+        width: 100%;
+    }
 
     @media screen and (min-width: 768px) {
         display: flex;
         flex-wrap: wrap;
         gap: 30px;
-}
+        width: 100%;
+    }
+
+    @media screen and (min-width: 1200px) {
+        display: flex;
+        flex-wrap: nowrap;
+        gap: 30px;
+    }
 }
 
 .significant__thumb {
@@ -15,11 +28,6 @@
     justify-content: center;
     margin-bottom: 30px;
     height: 120px;
-
-    // @media screen and (min-width: 768px) {
-    //     flex-basis: calc(100% / 2  - 30px);
-        
-    // }
 }
 
 .significant__list {
@@ -31,10 +39,18 @@
         }
     }
 
-    
-    @media screen and (min-width: 768px) {
-        flex-basis: calc(100% / 2  - 15px);
+    @media screen and (max-width: 480px) {
+        width: 100%;
             
+    }
+
+    @media screen and (min-width: 768px) {
+        width: calc(100% / 2 - 15px);
+    }
+
+    @media screen and (min-width: 1200px) {
+        flex-basis: calc(100%  / 4);
+
     }
     
    
