--- a/sass/components/index/_team.scss
+++ b/sass/components/index/_team.scss
@@ -4,10 +4,14 @@
 }
 
 .team__list {
-    // display: flex;
     gap: 30px;
 
     @media screen and (min-width: 768px) {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    @media screen and (min-width: 1200px) {
         display: flex;
         flex-wrap: wrap;
     }
@@ -25,7 +29,7 @@
         }
     }
 
-    @media screen and (min-width: 768px) {
+    @media screen and (max-width: 1199px) {
         flex-basis: calc( 100% / 2 - 15px);
     }
 
