--- a/sass/base/_base-classes.scss
+++ b/sass/base/_base-classes.scss
@@ -51,10 +51,10 @@ body {
 
     }
 
-    @media screen and (max-width: 480px) {
-        max-width: 480px;
+    // @media screen and (max-width: 480px) {
+    //     max-width: 480px;
 
-    }
+    // }
 
     @media screen and (min-width: 768px) {
         width: 768px;
@@ -69,7 +69,7 @@ body {
 
     @media screen and (min-width: 1200px) {
         width: 1200px;
-
+        
     }
 
     &__header {
