--- a/sass/components/index/_footer.scss
+++ b/sass/components/index/_footer.scss
@@ -46,7 +46,6 @@
 
         @media screen and (min-width: 768px) {
             margin-left: 76px;
-            margin-bottom: 60px;
         }
 
         @media screen and (min-width: 1200px) {
@@ -109,11 +108,8 @@
 .join-footer {
     display: flex;
     flex-direction: column;
-    // margin-left:  70px;
 
-    @media screen and (max-width: 767px) {
-        
-        margin-bottom: 60px;
+    @media screen and (max-width: 480px) {
         margin-left: auto;
         margin-right: auto;
     }
@@ -156,6 +152,7 @@
 // Mail section
 
 .mail-wrapper {
+    margin: 0 auto;
 
     @media screen and (max-width: 480px) {
         margin-left: auto;
@@ -173,10 +170,24 @@
     }
 
     &__footer {
-        @media screen and (max-width: 768px) {
+        margin: 0 auto;
+
+        @media screen and (max-width: 479px) {
             display: flex;
             flex-direction: column;
-            margin-bottom: 20px;
+            margin-top: 60px;
+        }
+        
+        @media screen and (min-width: 480px) {
+            display: flex;
+            flex-direction: column;
+            margin-top: 60px;
+        }
+
+        @media screen and (max-width: 767px) {
+            display: flex;
+            flex-direction: column;
+            
         }
 
         @media screen and (min-width: 1200px) {
@@ -205,7 +216,6 @@
         color: $color-white;
 
         @media screen and (max-width: 767px) {
-            // width: 100%;
             margin-bottom: 20px;
         }
 
@@ -257,7 +267,19 @@
         outline: $accent-color;
     }
 
-    @media screen and(max-width: 768px) {
+    @media screen and(max-width: 1199px) {
         margin: 0 auto;
     }
+
+    @media screen and(min-width: 768px) {
+        margin: 0 auto;
+        margin-top: 20px;
+    }
+
+    @media screen and(min-width: 1200px) {
+        margin: 0 auto;
+        margin-left: 12px;
+    }
+
+   
 }
