--- a/sass/components/index/_hero.scss
+++ b/sass/components/index/_hero.scss
@@ -5,15 +5,78 @@
 }
 
 .hero__overlay {
-    height: 600px;
-    max-width: 1600px;
+
+    height: 400px;
+    max-width: 480px;
     margin: 0 auto;
 
-    background-image: linear-gradient( to right, rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url('../img/hero-bg.jpg');
+    background-image: linear-gradient( to right, rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url('../../../img/hero-bg-mobile.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center; 
+    background-position: center center; 
     background-color: #C4C4C4;
+
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+
+    & {
+        background-image: url('../../../img/hero-bg-mobile@2x.jpg');
+    background-color: #C4C4C4;
+        
+    }
+}
+
+@media screen and (min-width: 768px) {
+    & {
+        height: 400px;
+        max-width: 768px;
+        margin: 0 auto;
+    
+        background-image: linear-gradient( to right, rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url('../../../img/hero-bg-tablet.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center; 
+        background-color: #C4C4C4;
+    }
+
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+        & {
+
+        background-image: linear-gradient( to right, rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url('../../../img/hero-bg-tablet@2x.jpg');
+         }
+    }
+}
+
+
+
+    @media screen and (min-width: 1200px) {
+        & {
+            height: 600px;
+            max-width: 1600px;
+            margin: 0 auto;
+        
+            background-image: linear-gradient( to right, rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url('../../../img/hero-bg.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center; 
+            background-color: #C4C4C4;
+        }
+
+        @media (min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+
+        & {
+            background-image: url('../../../img/hero-bg@2x.jpg');
+        }
+
+  
+    }
+    }
+
 }
 
 .hero__title {
