--- a/sass/components/index/_hero.scss
+++ b/sass/components/index/_hero.scss
@@ -33,7 +33,7 @@
         max-width: 768px;
         margin: 0 auto;
     
-        background-image: linear-gradient( to right, rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url('./../../img/hero-bg-tablet.jpg');
+        background-image: linear-gradient( to right, rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url('/img/hero-bg-tablet.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center; 
@@ -45,7 +45,7 @@
     (min-resolution: 2dppx) {
         & {
 
-        background-image: linear-gradient( to right, rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url('./../../img/hero-bg-tablet@2x.jpg');
+        background-image: linear-gradient( to right, rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url('../../../img/hero-bg-tablet@2x.jpg');
          }
     }
 }
