--- a/sass/components/index/_hero.scss
+++ b/sass/components/index/_hero.scss
@@ -10,7 +10,7 @@
     max-width: 480px;
     margin: 0 auto;
 
-    background-image: linear-gradient( to right, rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url('../../../img/hero-bg-mobile.jpg');
+    background-image: linear-gradient( to right, rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url('../img/hero-bg-mobile.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center; 
@@ -33,7 +33,7 @@
         max-width: 768px;
         margin: 0 auto;
     
-        background-image: linear-gradient( to right, rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url('../../../img/hero-bg-tablet.jpg');
+        background-image: linear-gradient( to right, rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url('../img/hero-bg-tablet.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center; 
@@ -45,7 +45,7 @@
     (min-resolution: 2dppx) {
         & {
 
-        background-image: linear-gradient( to right, rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url('../../../img/hero-bg-tablet@2x.jpg');
+        background-image: linear-gradient( to right, rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url('../img/hero-bg-tablet@2x.jpg');
          }
     }
 }
@@ -58,7 +58,7 @@
             max-width: 1600px;
             margin: 0 auto;
         
-            background-image: linear-gradient( to right, rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url('../../../img/hero-bg.jpg');
+            background-image: linear-gradient( to right, rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url('../img/hero-bg.jpg');
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center center; 
