--- a/css/main.css
+++ b/css/main.css
@@ -82,9 +82,6 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -110,6 +107,16 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
+}
+@media screen and (max-width: 1199px) {
+  .section__title {
+    margin-bottom: 30px;
+    font-size: 28px;
+    line-height: 1.17;
+    /* identical to box height */
+    text-align: center;
+    letter-spacing: 0.03em;
+  }
 }
 
 .input {
@@ -180,6 +187,9 @@ img {
   outline: #2196F3;
 }
 
+.adress__nav {
+  margin-left: auto;
+}
 @media screen and (max-width: 767px) {
   .adress__nav {
     display: -webkit-box;
@@ -206,13 +216,29 @@ img {
     display: none;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .adress__nav {
-    color: #757575;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin-left: auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .adress__nav {
+    color: #757575;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    gap: 30px;
     padding-top: 32px;
     padding-bottom: 32px;
     font-weight: 500;
@@ -266,7 +292,6 @@ img {
     font-size: 12px;
     line-height: 1.16;
     letter-spacing: 0.02em;
-    margin-left: 50px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -276,11 +301,6 @@ img {
     line-height: 1.14;
     letter-spacing: 0.02em;
     margin-bottom: 0;
-  }
-}
-@media screen and (max-width: 1199px) {
-  .adress__item:not(:last-child) {
-    margin-bottom: 64px;
   }
 }
 @media screen and (max-width: 479px) {
@@ -385,6 +405,32 @@ img {
   }
 }
 
+.header__wrapper.is-open + .heder_mob1 {
+  display: none;
+}
+@media screen and (max-width: 767px) {
+  .header__wrapper.is-open + .heder_mob1 {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .heder_mob1 {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .heder_mob1 {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .heder_mob {
+    display: none;
+  }
+}
+
 .mobile-btn {
   z-index: 3;
   width: 40px;
@@ -480,7 +526,7 @@ img {
   }
 }
 
-.header__nav {
+.heder__nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -489,12 +535,12 @@ img {
           align-items: center;
 }
 @media screen and (min-width: 768px) {
-  .header__nav {
+  .heder__nav {
     margin-left: -96px;
   }
 }
 @media screen and (min-width: 1200px) {
-  .header__nav {
+  .heder__nav {
     margin-right: 96px;
   }
 }
@@ -1154,19 +1200,13 @@ img {
 }
 .join-footer__title,
 .mail-wrapper__title {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
-}
-@media screen and (max-width: 767px) {
-  .join-footer__title,
-.mail-wrapper__title {
-    margin-bottom: 20px;
-  }
 }
 
 .join-footer__link {
@@ -1330,7 +1370,7 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-  min-height: 581px;
+  min-height: 609px;
   padding: 40px 40px;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1341,9 +1381,14 @@ img {
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 480px) {
   .backdrop__modal--is-hidden {
     width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .backdrop__modal--is-hidden {
+    min-width: 528px;
   }
 }
 
