--- a/sass/base/_base-classes.scss
+++ b/sass/base/_base-classes.scss
@@ -38,6 +38,8 @@ body {
     color: $primary-text-color;
     font-family: 'Roboto', sans-serif;
     background-color: $color-white;
+
+
 }
 
 .container {
@@ -74,7 +76,7 @@ body {
 
     &__header {
         display: flex;
-        justify-content: space-between;
+        // justify-content: space-between;
         align-items: center;
     }
 }
@@ -103,17 +105,17 @@ body {
 
     color: $secondary-title-text;
 
-    // & {
-    //     @media screen and (max-width: 768px) {
-    //         margin-bottom: 30px;
-    //         font-size: 28px;
-    //         line-height: 1.17;
-    //         /* identical to box height */
 
-    //         text-align: center;
-    //         letter-spacing: 0.03em;
-    //     }
-    // }
+     @media screen and (max-width: 1199px) {
+        margin-bottom: 30px;
+        font-size: 28px;
+        line-height: 1.17;
+        /* identical to box height */
+
+         text-align: center;
+        letter-spacing: 0.03em;
+    }
+    
 }
 
 .input {
