--- a/sass/components/index/_address.scss
+++ b/sass/components/index/_address.scss
@@ -1,4 +1,5 @@
 .adress__nav {
+    margin-left: auto;
 
     @media screen and (max-width: 767px) {
 
@@ -24,10 +25,18 @@
         }
     }
 
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+
+    }
+
     @media screen and (min-width: 1200px) {
         color: $primary-text-color;
-        display: flex;
-        margin-left: auto;
+        flex-direction: row;
+        align-items: center;
+        gap: 30px;
         padding-top: 32px;
         padding-bottom: 32px;
     
@@ -95,7 +104,6 @@
 
             letter-spacing: 0.02em;
 
-            margin-left: 50px;
         }
 
         @media screen and (min-width: 1200px) {
@@ -106,11 +114,7 @@
             margin-bottom: 0;
         }
 
-        @media screen and (max-width: 1199px) {
-           &:not(:last-child) {
-            margin-bottom: 64px;
-        }
-        }
+      
 
         @media screen and (max-width: 479px) {
             a[href^="tel"] {
